add original prod by not git

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,58 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+org/out/09102989061-1.json
+org/out/09102989061-1.xlsx
+org/out/09102989061-1.xml
+org/out/09102989061-2.json
+org/out/09102989061-2.xlsx
+org/out/09102989061-2.xml
+org/out/09102989061-3.json
+org/out/09102989061-3.xlsx
+org/out/09102989061-3.xml
+org/out/09102989061-3c.csv
+org/out/09751085061.csv
+org/out/09751085061.json
+org/out/09751085061.xml
+org/test/opt01/ex_option.json
+org/test/opt01/main.go
+org/test/opt01/option.json
+org/inp/case.ini
+org/inp/case2.ini
+org/inp/case3.ini
+org/inp/case4.ini
+org/inp/config.ini
+org/inp/option.ini
+org/inv/conf.go
+org/inv/csv.go
+org/inv/db.go
+org/inv/invoices.go
+org/inv/json.go
+org/inv/MDetails.go
+org/inv/MFilebunker.go
+org/inv/MInvoice.go
+org/inv/misc.go
+org/inv/miscFile.go
+org/inv/miscMath.go
+org/inv/miscStr.go
+org/inv/opts.go
+org/inv/xlsx.go
+org/inv/xml.go
+org/all.json
+org/cases.json
+org/config.json
+org/main.go
+org/README.md
+org/data/data.db
+org/inp/8906c.ini
+org/inp/8906j.ini
+org/inp/8906s.ini
+org/inp/8906x.ini
+org/inp/09102989061-1.csv
+org/inp/09102989061-1c.csv
+org/inp/09102989061-2.csv
+org/inp/09102989061-2c.csv
+org/inp/09102989061-3.csv
+org/inp/09102989061-3c.csv
+org/inp/09751085061.csv
+org/inp/c0910298906.ini
