--- a/appinv/config.yaml
+++ b/appinv/config.yaml
@@ -1,7 +1,7 @@
 DBfilename: ./data/invoices.db
 IsInitialDB: false
-Verbose: false
-ColorsOn: false
+Verbose: true
+ColorsOn: true
 IsDump: false
 DumpFilename: ./all_invoices.json
 CaseFilename: ./cases.yaml
