--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,39 @@ org/inp/09751085061.csv
 org/inp/c0910298906.ini
 
 .vscode/launch.json
+ansi-styles-master/.gitignore
+ansi-styles-master/.editorconfig
+ansi-styles-master/.gitattributes
+ansi-styles-master/.npmrc
+ansi-styles-master/.travis.yml
+ansi-styles-master/index.js
+ansi-styles-master/license
+ansi-styles-master/package.json
+ansi-styles-master/readme.md
+ansi-styles-master/screenshot.png
+ansi-styles-master/test.js
+chalk-master/benchmark.js
+chalk-master/.editorconfig
+chalk-master/.gitattributes
+chalk-master/.gitignore
+chalk-master/.npmrc
+chalk-master/.travis.yml
+chalk-master/code-of-conduct.md
+chalk-master/contributing.md
+chalk-master/index.js
+chalk-master/license
+chalk-master/package.json
+chalk-master/readme.md
+chalk-master/templates.js
+chalk-master/examples/rainbow.js
+chalk-master/examples/screenshot.js
+chalk-master/media/logo.png
+chalk-master/media/logo.svg
+chalk-master/test/_fixture.js
+chalk-master/test/_supports-color.js
+chalk-master/test/chalk.js
+chalk-master/test/constructor.js
+chalk-master/test/enabled.js
+chalk-master/test/level.js
+chalk-master/test/template-literal.js
+chalk-master/test/windows.js
