correct a little bit of codes

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ chalk-master/test/enabled.js
 chalk-master/test/level.js
 chalk-master/test/template-literal.js
 chalk-master/test/windows.js
+appinv/out/09102989061-5.xlsx
